--- a/package.json
+++ b/package.json
@@ -6,18 +6,24 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.23.2",
+    "axios": "^0.27.2",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-auth-kit": "^2.1.1",
     "react-dom": "^18.2.0",
+    "react-pro-sidebar": "^0.7.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
+   
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=9090 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
+  },"proxy": "http://localhost:9090",
   "eslintConfig": {
     "extends": [
       "react-app",
