--- a/package.json
+++ b/package.json
@@ -12,18 +12,20 @@
     "react": "^18.2.0",
     "react-auth-kit": "^2.1.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-pro-sidebar": "^0.7.1",
+    "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
-   
   },
   "scripts": {
-    "start": "set PORT=9090 && react-scripts start",
+    "start": "set PORT=9000 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },"proxy": "http://localhost:9090",
+  },
+  "proxy": "http://localhost:9000",
   "eslintConfig": {
     "extends": [
       "react-app",
